media-modal: avoid horizontal scrollbars when file name is too long

--- a/client/post-editor/media-modal/detail/_style.scss
+++ b/client/post-editor/media-modal/detail/_style.scss
@@ -175,6 +175,7 @@
 .editor-media-modal-detail__file-info tr {
 	display: block;
 	flex-basis: 50%;
+	width: 100%;
 }
 
 .editor-media-modal-detail__file-info th,
@@ -199,6 +200,10 @@
 
 	&::after {
 		@include long-content-fade( $color: $white );
+	}
+
+	span {
+		display: block;
 	}
 }
 
